--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     environment:
        POSTGRES_PASSWORD: root
        POSTGRES_USER: admin
-       POSTGRES_DB: my_db
+      #  POSTGRES_DB: my_db
     networks:
       - backend
       
